Fixed JDK 1.4 compile issue
git-svn-id: http://svn.apache.org/repos/asf/myfaces/tomahawk/trunk@415354 13f79535-47bb-0310-9956-ffa450edef68